--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 <body>
 <h1>Unsplash API - Infinite Gallery</h1>
 
-<div class="loader" id="loader" hidden>
+<div class="loader" id="loader">
     <img src="loader.svg" alt="Loading"/>
 </div>
 
-<div class="image-container" id="image-container">
-    
-</div>
+<div class="image-container" id="image-container"></div>
 <!-- SCRIPT -->
 <script src="script.js"></script>
 </body>
