--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=https://cdnjs.com/">
     <link rel="stylesheet" href="style.css">
-    <title>Quote Generator</title>
+    <title>Infinite Gallery</title>
 </head>
 <body>
 <h1>Unsplash API - Infinite Gallery</h1>
